# BOED_EBM

./: .gitignore  README.md  common_boed_discrete_prey.py  common_boed_source_expressive_policy.py  common_boed_source_nes_opt_fixed12.py  prey_population_benchmark.html  prey_population_experiment.py  pyproject.toml  results_appendix_draft.md  results_section_draft.md  source_location_experiment_expressive_policy.py  source_location_experiment_nes_opt_fixed12.py
boedx/: __init__.py  buffer.py  env.py  homeostatic.py  models.py  nes_trainer.py  plotting.py  state.py  trainer.py  utils.py
boedx/experiments/: __init__.py  dose_response.py  prey_population.py  source_location.py  source_location_nes.py
docs/: architecture.md  development.md  experiments.md  homeostatic_filter.md  moe_ebm.md
outputs/dose_response_live/: run_config_and_summary.json  summary_multi_seed.json
outputs/source_location_beta_contrastive_h50/: run_config_and_summary.json
outputs/source_location_nes_fixed11_transformer_full_ablation_1/: run_config_and_summary.json  summary_multi_seed.json
outputs_1/prey_population/: run_config_and_summary_prey.json  summary_multi_seed.json
outputs_1/prey_smoke/: run_config_and_summary.json  summary_multi_seed.json
outputs_1/prey_smoke/blau_approx/seed_0/: result.json
outputs_1/prey_smoke/ours_ebm_control/seed_0/: result.json
outputs_1/prey_smoke/ours_ebm_cross/seed_0/: result.json
outputs_1/source_location_beta_contrastive_h50/: summary_multi_seed.json
tests/: test_homeostatic_filter.py  test_moe_ebm.py
