[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "boedx"
version = "0.1.0"
description = "Bayesian Optimal Experimental Design with Expressive Policies (BOEDX)"
authors = [{ name = "Yovani" }]
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[project.scripts]
boedx-source-location     = "boedx.experiments.source_location:main"
boedx-source-location-nes = "boedx.experiments.source_location_nes:main"
boedx-prey-population     = "boedx.experiments.prey_population:main"
boedx-plot                = "boedx.plotting:_cli_generate_plots"

[tool.setuptools.packages.find]
where = ["."]
include = ["boedx*"]
